--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jsxn",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "JSON XML Proxy",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
