--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsxn",
-  "version": "0.0.9",
-  "description": "JSON XML Proxy",
+  "version": "0.0.10",
+  "description": "JSON representation of XML",
   "homepage": "https://github.com/dakaraphi/jslib-jsxn",
   "repository": "dakaraphi/jslib-jsxn",
   "main": "dist/index.js",
@@ -10,12 +10,11 @@
   },
   "author": "Chad Meadows",
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "saxes": "3.1.9",
-    "slimdom-sax-parser": "1.1.3",
-    "slimdom": "2.3.0",
-    "@types/node": "^11.13.6"
+    "saxes": "5.0.1",
+    "slimdom-sax-parser": "1.3.0",
+    "slimdom": "2.3.2",
+    "@types/node": "^14.0.27"
   }
 }
